@@ -18,7 +18,7 @@ struct rpmBuildArguments_s         rpmBTArgs;
 #define	POPT_NOLANG		-1012
 #define	POPT_RMSOURCE		-1013
 #define	POPT_RMBUILD		-1014
-#define	POPT_BUILDROOT		-1015
+	/* XXX was POPT_BUILDROOT -1015 */
 
 #define	POPT_NOBUILD		-1017
 #define	POPT_SHORTCIRCUIT	-1018
@@ -102,13 +102,6 @@ static void buildArgCallback( /*@unused@*/ poptContext con,
     case POPT_RMSOURCE: rba->buildAmount |= RPMBUILD_RMSOURCE; break;
     case POPT_RMSPEC: rba->buildAmount |= RPMBUILD_RMSPEC; break;
     case POPT_RMBUILD: rba->buildAmount |= RPMBUILD_RMBUILD; break;
-    case POPT_BUILDROOT:
-	if (rba->buildRootOverride) {
-	    rpmError(RPMERR_BUILDROOT, _("buildroot already specified, ignoring %s\n"), arg);
-	    break;
-	}
-	rba->buildRootOverride = xstrdup(arg);
-	break;
 
     case RPMCLI_POPT_NODIGEST:
 	rba->qva_flags |= VERIFY_DIGEST;
@@ -195,8 +188,6 @@ struct poptOption rpmBuildPoptTable[] = {
 	N_("build through %install (%prep, %build, then install) from <source package>"),
 	N_("<source package>") },
 
- { "buildroot", '\0', POPT_ARG_STRING, 0,  POPT_BUILDROOT,
-	N_("override build root"), "DIRECTORY" },
  { "clean", '\0', 0, 0, POPT_RMBUILD,
 	N_("remove build tree when done"), NULL},
  { "force", '\0', POPT_ARGFLAG_DOC_HIDDEN, &rpmBTArgs.force, RPMCLI_POPT_FORCE,
